RESOLVED FIXED286383
Fix the Safari Technology Preview build
https://bugs.webkit.org/show_bug.cgi?id=286383
Summary Fix the Safari Technology Preview build
Aditya Keerthi
Reported 2025-01-22 14:38:19 PST
Attachments
Aditya Keerthi
Comment 1 2025-01-22 14:41:57 PST
EWS
Comment 2 2025-01-22 14:49:14 PST
Committed 289259@main (61f43d2029eb): <https://commits.webkit.org/289259@main> Reviewed commits have been landed. Closing PR #39408 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.