Fix the Safari Technology Preview build https://bugs.webkit.org/show_bug.cgi?id=286383 rdar://143425407

Reviewed by Tim Nguyen.

`showWritingTools:` is only available on macOS 15.2.

* Source/WTF/wtf/PlatformHave.h:
* Source/WebKit/UIProcess/mac/WebViewImpl.mm:
(WebKit::WebViewImpl::validateUserInterfaceItem):

Canonical link: https://commits.webkit.org/289259@main